# hightorrent_api

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: pre-commit.sh  qbittorrent.sh
src/: .lib.rs.swp  api_error.rs  lib.rs
src/api/: add.rs  mod.rs
src/qbittorrent/: api.rs  mod.rs  torrent.rs
tests/: qbittorrent.rs
