[package]
name = "hightorrent_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "qbittorrent" ]
qbittorrent = [ "reqwest" ]

[dependencies]
hightorrent = { version = "0.2", path = "../hightorrent" }
tokio = { version = "1", features = [ "fs" ] }
tokio-util = { version = "0.7" }
async-trait = "0.1"

snafu = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

reqwest = { version = "0.12", optional = true, default-features = false, features = [ "multipart", "json", "cookies", "stream" ] }

