[package]
name = "hightorrent_api"
description = "Highlevel torrent API client, supporting Bittorrent v1, v2 and hybrid torrents"
version = "0.1.0"
edition = "2024"
authors = [ "angrynode <angrynode@kl.netlib.re>" ]
documentation = "https://docs.rs/hightorrent_api"
keywords = [ "torrent", "magnet", "bittorrent", "qbittorrent" ]
readme = "README.md"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "qbittorrent" ]
qbittorrent = [ "reqwest" ]

[dependencies]
# hightorrent = { version = "0.2", path = "../hightorrent" }
hightorrent = { git = "https://github.com/angrynode/hightorrent" }
tokio = { version = "1", features = [ "fs" ] }
tokio-util = { version = "0.7" }
async-trait = "0.1"

snafu = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

reqwest = { version = "0.12", optional = true, default-features = false, features = [ "multipart", "json", "cookies", "stream" ] }

[dev-dependencies]
# Required for tokio::test macro
tokio = { version = "*", features = [ "rt", "macros" ] }
